removed package-lock.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@types/mongodb": "^3.5.34",
     "mongodb": "^3.5.9",
-    "next": "latest",
+    "next": "^10.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
